Prepare new release
Some of the adjustments include:
- Update dependencies
- Use new proto builder
- Update CI/CD workflows
- Add scanning for secrets

[buf-breaking skip]
