# proto/did/v1/agent_api.swagger.json
@@ -4,6 +4,11 @@
     "title": "did/v1/agent_api.proto",
     "version": "version not set"
   },
+  "tags": [
+    {
+      "name": "AgentAPI"
+    }
+  ],
   "consumes": [
     "application/json"
   ],
@@ -25,7 +30,7 @@
           "default": {
             "description": "An unexpected error response.",
             "schema": {
-              "$ref": "#/definitions/runtimeError"
+              "$ref": "#/definitions/rpcStatus"
             }
           }
         },
@@ -48,7 +53,7 @@
           "default": {
             "description": "An unexpected error response.",
             "schema": {
-              "$ref": "#/definitions/runtimeError"
+              "$ref": "#/definitions/rpcStatus"
             }
           }
         },
@@ -81,7 +86,7 @@
           "default": {
             "description": "An unexpected error response.",
             "schema": {
-              "$ref": "#/definitions/runtimeError"
+              "$ref": "#/definitions/rpcStatus"
             }
           }
         },
@@ -111,30 +116,25 @@
     "ProcessRequestTask": {
       "type": "string",
       "enum": [
+        "TASK_UNSPECIFIED",
         "TASK_PUBLISH",
         "TASK_DEACTIVATE"
       ],
-      "default": "TASK_PUBLISH",
+      "default": "TASK_UNSPECIFIED",
       "description": "Available mutations."
     },
     "protobufAny": {
       "type": "object",
       "properties": {
-        "type_url": {
+        "@type": {
           "type": "string"
-        },
-        "value": {
-          "type": "string",
-          "format": "byte"
         }
-      }
+      },
+      "additionalProperties": {}
     },
-    "runtimeError": {
+    "rpcStatus": {
       "type": "object",
       "properties": {
-        "error": {
-          "type": "string"
-        },
         "code": {
           "type": "integer",
           "format": "int32"
@@ -208,12 +208,12 @@
           "format": "int64",
           "description": "UNIX timestamp (in UTC) when the ticket was generated.\nAll ticket automatically expire after 5 minutes to\nprevent replay attacks."
         },
-        "nonce_value": {
+        "nonceValue": {
           "type": "string",
           "format": "int64",
           "description": "Nonce selected to solve the PoW challenge."
         },
-        "key_id": {
+        "keyId": {
           "type": "string",
           "description": "Cryptographic key identifier. Must be a valid 'authentication' method\non the DID document. The key will be used to generate the DID proof\nand to sign the ticket itself."
         },
